--- a/Pagina01/pagina-1-v5.html
+++ b/Pagina01/pagina-1-v5.html
@@ -34,7 +34,7 @@
                     <Aliquam>Cras sit amet scelerisque justo, at porttitor lectus. Quisque tristique, tellus non laoreet ultricies, felis arcu ecitur tortor, id sollicitudin lacus justo elementum massa. Aliquam erat volut-pat.</p>
                 </article>
             </div>
-            <div class="categorias">
+            <div class="category">
                 <h2>Categorias</h2>
                 <nav>
                     <ul>
