ajustes no exercicio 5

--- a/Pagina01/pagina-1-v5.html
+++ b/Pagina01/pagina-1-v5.html
@@ -9,20 +9,20 @@
         <link rel="stylesheet" href="css.css"/>
     </head>
     <body>
-        <section>
-            <header>
-                <div class="items-header">
-                    <p>Nome da empresa</p>
-                    <nav class="navegacao">
-                        <a href="pagina-1.html">Link1</a>
-                        <a href="pagina-1-v2.html">Link2</a>
-                        <a href="pagina-1-v3.html">Link3</a>
-                        <a href="pagina-1-v4.html">Link4</a>
-                    </nav>
-                </div>
-            </header>
-        </section>
-        <section class="container">
+
+        <header>
+            <div class="items-header">
+                <p>Nome da empresa</p>
+                <nav class="navegacao">
+                    <a href="pagina-1.html">Link1</a>
+                    <a href="pagina-1-v2.html">Link2</a>
+                    <a href="pagina-1-v3.html">Link3</a>
+                    <a href="pagina-1-v4.html">Link4</a>
+                </nav>
+            </div>
+        </header>
+        
+        <div class="container">
             <div class="principal">
                 <h1 class="titulo-principal">Título</h1>
                 <article>
@@ -34,18 +34,20 @@
                     <Aliquam>Cras sit amet scelerisque justo, at porttitor lectus. Quisque tristique, tellus non laoreet ultricies, felis arcu ecitur tortor, id sollicitudin lacus justo elementum massa. Aliquam erat volut-pat.</p>
                 </article>
             </div>
-            <div class="category">
-                <h2>Categorias</h2>
-                <nav>
-                    <ul>
-                        <li><a href="pagina-1.html">Link1</a></li>
-                        <li><a href="pagina-1-v2.html">Link2</a></li>
-                        <li><a href="pagina-1-v3.html">Link3</a></li>
-                        <li><a href="pagina-1-v4.html">Link4</a></li>
-                    </ul>
-                </nav>
+            <div>
+                <aside class="category">
+                    <h2>Categorias</h2>
+                    <nav>
+                        <ul>
+                            <li><a href="pagina-1.html">Link1</a></li>
+                            <li><a href="pagina-1-v2.html">Link2</a></li>
+                            <li><a href="pagina-1-v3.html">Link3</a></li>
+                            <li><a href="pagina-1-v4.html">Link4</a></li>
+                        </ul>
+                    </nav>
+                </aside>
             </div>
-        </section>
+        </div>
         <footer>
             <p>Todos os direitos reservados - 2018</p>
         </footer>
