feat: exercicio 6 e ajuste exercicio 5

--- a/Pagina01/pagina-1-v3.html
+++ b/Pagina01/pagina-1-v3.html
@@ -20,7 +20,7 @@
             </article>
             <h2>Subtítulo</h2>
             <article>
-                <Aliquam>Cras sit amet scelerisque justo, at porttitor lectus. Quisque tristique, tellus non laoreet ultricies, felis arcu ecitur tortor, id sollicitudin lacus justo elementum massa. Aliquam erat volut-pat.</p>
+                <<p>Aliquam>Cras sit amet scelerisque justo, at porttitor lectus. Quisque tristique, tellus non laoreet ultricies, felis arcu ecitur tortor, id sollicitudin lacus justo elementum massa. Aliquam erat volut-pat.</p>
             </article>
         </div>
         <footer>
