--- a/Pagina01/pagina-1-v4.html
+++ b/Pagina01/pagina-1-v4.html
@@ -12,7 +12,7 @@
         <header>
             <div class="items-header">
                 <p>Nome da empresa</p>
-                <nav class="navegacao">
+                <nav class="navegation">
                     <a href="pagina-1.html">Link1</a>
                     <a href="pagina-1-v2.html">Link2</a>
                     <a href="pagina-1-v3.html">Link3</a>
@@ -28,7 +28,7 @@
             </article>
             <h2>Subtítulo</h2>
             <article>
-                <Aliquam>Cras sit amet scelerisque justo, at porttitor lectus. Quisque tristique, tellus non laoreet ultricies, felis arcu ecitur tortor, id sollicitudin lacus justo elementum massa. Aliquam erat volut-pat.</p>
+                <p><p></p>Aliquam Cras sit amet scelerisque justo, at porttitor lectus. Quisque tristique, tellus non laoreet ultricies, felis arcu ecitur tortor, id sollicitudin lacus justo elementum massa. Aliquam erat volut-pat.</p>
             </article>
         </div>
         <footer>
