--- a/Pagina01/pagina-1-v5.html
+++ b/Pagina01/pagina-1-v5.html
@@ -13,7 +13,7 @@
         <header>
             <div class="items-header">
                 <p>Nome da empresa</p>
-                <nav class="navegacao">
+                <nav class="navegation">
                     <a href="pagina-1.html">Link1</a>
                     <a href="pagina-1-v2.html">Link2</a>
                     <a href="pagina-1-v3.html">Link3</a>
@@ -22,7 +22,7 @@
             </div>
         </header>
         
-        <div class="container">
+        <div class="container-body">
             <div class="principal">
                 <h1 class="titulo-principal">Título</h1>
                 <article>
@@ -31,23 +31,22 @@
                 </article>
                 <h2>Subtítulo</h2>
                 <article>
-                    <Aliquam>Cras sit amet scelerisque justo, at porttitor lectus. Quisque tristique, tellus non laoreet ultricies, felis arcu ecitur tortor, id sollicitudin lacus justo elementum massa. Aliquam erat volut-pat.</p>
+                    <<p>Aliquam>Cras sit amet scelerisque justo, at porttitor lectus. Quisque tristique, tellus non laoreet ultricies, felis arcu ecitur tortor, id sollicitudin lacus justo elementum massa. Aliquam erat volut-pat.</p>
                 </article>
             </div>
             <div>
                 <aside class="category">
                     <h2>Categorias</h2>
-                    <nav>
-                        <ul>
-                            <li><a href="pagina-1.html">Link1</a></li>
-                            <li><a href="pagina-1-v2.html">Link2</a></li>
-                            <li><a href="pagina-1-v3.html">Link3</a></li>
-                            <li><a href="pagina-1-v4.html">Link4</a></li>
-                        </ul>
-                    </nav>
+                    <ul>
+                        <li><a href="pagina-1.html">Link1</a></li>
+                        <li><a href="pagina-1-v2.html">Link2</a></li>
+                        <li><a href="pagina-1-v3.html">Link3</a></li>
+                        <li><a href="pagina-1-v4.html">Link4</a></li>
+                    </ul>
                 </aside>
             </div>
         </div>
+
         <footer>
             <p>Todos os direitos reservados - 2018</p>
         </footer>
