--- a/Pagina01/pagina-1-v2.html
+++ b/Pagina01/pagina-1-v2.html
@@ -17,7 +17,7 @@
             </article>
             <h2>Subtítulo</h2>
             <article>
-                <Aliquam>Cras sit amet scelerisque justo, at porttitor lectus. Quisque tristique, tellus non laoreet ultricies, felis arcu ecitur tortor, id sollicitudin lacus justo elementum massa. Aliquam erat volut-pat.</p>
+                <p>Cras sit amet scelerisque justo, at porttitor lectus. Quisque tristique, tellus non laoreet ultricies, felis arcu ecitur tortor, id sollicitudin lacus justo elementum massa. Aliquam erat volut-pat.</p>
             </article>
         </div>
     </body>
